twitter api fixes and new error message display

--- a/views/flights/allFlights.ejs
+++ b/views/flights/allFlights.ejs
@@ -33,6 +33,7 @@
     <%- include('../flights/ordermodal.ejs') %>
 
     <%- include('../flights/editModal.ejs') %>
+    <%- include('../partials/errorMessage.ejs') %>
 
     <%- include('../partials/navBar.ejs') %>
 <div class="main-content" id="block_center" >
@@ -179,7 +180,8 @@
    })();
 </script>
     </div>
-  </div>
+
+</div>
 <script type="text/javascript" src="./flights.js"></script>
 </body>
 </html>
