--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -46,9 +46,10 @@
 </div>
 </div>
 </div>
-
+</div>
 
 <script type="text/javascript" src="./login.js"></script>
+<%- include('../partials/errorMessage.ejs') %>
 
 
 </body>
