--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -11,11 +11,13 @@
                     <a class="nav-link" aria-current="page" href="/flights">Flights</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Orders</a>
+                    <a class="nav-link" href="/orders">Orders</a>
                 </li>
+                <%if(isAdmin){%>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Members</a>
+                    <a class="nav-link" href="/admin/users">users</a>
                 </li>
+                <%}%>
             </ul>
         </div>
         <div class="d-flex">
